2010-12-21  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/8725702> REGRESSION(r68854): Broken image icon seen in the Address Book Dashboard widget

        * platform/mac/fast/dom/HTMLImageElement/dashboard-src-quirk-expected.txt: Added.
        * platform/mac/fast/dom/HTMLImageElement/dashboard-src-quirk.html: Added.
        * platform/mac/fast/dom/HTMLImageElement/resources: Added.
        * platform/mac/fast/dom/HTMLImageElement/resources/blue_rect.jpg: Added.

2010-12-21  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        WebGLRenderingContext needs to zero textures and renderbuffers
        https://bugs.webkit.org/show_bug.cgi?id=49355

        * fast/canvas/webgl/uninitialized-test-expected.txt: Added.
        * fast/canvas/webgl/uninitialized-test.html: Added.

2010-12-21  Kenneth Russell  <kbr@google.com>

        Unreviewed test expectations update. Remove the following five
        expected text differences from the chromium-gpu test expectations
        file, because these tests are now passing in DumpRenderTree (and
        Chromium with --in-process-webgl --disable-accelerated-compositing):
            canvas/philip/tests/2d.shadow.transform.2.html
            canvas/philip/tests/2d.imageData.get.source.outside.html
            fast/canvas/canvas-scale-fillRect-shadow.html
            fast/canvas/canvas-scale-fillPath-shadow.html
            fast/canvas/canvas-scale-strokePath-shadow.html

        * platform/chromium-gpu/test_expectations.txt:

2010-12-21  Andy Estes  <aestes@apple.com>

        Rebaseline test for r74427.

        * http/tests/local/formdata/send-form-data-with-sliced-file-expected.txt: Updated.

2010-12-21  Ariya Hidayat  <ariya@sencha.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=49774
        Need to scale translation values in matrix() by the zoom factor.
