@@ -1,0 +1,10 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBody {BODY} at (0,0) size 800x600
+layer at (48,72) size 120x120
+  RenderBlock (positioned) {DIV} at (48,72) size 120x120 [bgcolor=#FF0000]
+layer at (48,72) size 120x120
+  RenderBlock (positioned) {DIV} at (48,72) size 120x120 [bgcolor=#008000]
