@@ -1,3 +1,15 @@
+2010-12-21  Jan Erik Hanssen  <jhanssen@sencha.com>
+
+        Reviewed by Simon Fraser.
+
+        matrix3d() must take the zoom factor into account
+        https://bugs.webkit.org/show_bug.cgi?id=51408
+
+        Test: transforms/3d/general/matrix-with-zoom-3d.html
+
+        * css/CSSStyleSelector.cpp:
+        (WebCore::CSSStyleSelector::createTransformOperations):
+
 2010-12-21  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Darin Adler.
